--- a/Desafio6/index.html
+++ b/Desafio6/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+<body style="margin: 0; padding: 0;">
+    <div class="titulo" id="titulo">
+        <h1 id="titulo" style="text-align: center; margin: auto; width: 100%; font-size: 35px; font-weight: 500; padding: 30px 0;">🐾 Diseñemos juntos el accesorio para tu peludo amigo 🐾</h1>
+    </div>
+    <div class="container">
+        <form id="formRegistro">
+            <div class="mb-3">
+                <label for="nombre" class="form-label">Tu nombre:</label>
+                <input type="text" class="form-control" id="nombre" name="nombre">
+            </div>
+            <div class="mb-3">
+                <label for="accesorio" class="form-label">Accesorio deseado:</label>
+                <select class="form-select" id="accesorio">
+                    <option value="Bandana">Bandana</option>
+                    <option value="Correa">Correa</option>
+                    <option value="Placa ID">Placa ID</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="cantidad" class="form-label">Cantidad deseada:</label>
+                <input type="number" class="form-control" id="cantidad" name="cantidad">
+            </div>
+            <div class="mb-3">
+                <label for="number" class="form-label">Tu teléfono de contacto:</label>
+                <input type="number" class="form-control" id="number" name="number">
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Tu correo:</label>
+                <input type="email" class="form-control" id="email" name="email">
+            </div>
+            <button type="submit" class="btn btn-primary d-grid gap-2 col-6 mx-auto">Enviar</button>
+            </form>
+    </div><br><br>
 
+    <button id="botonRegistro" class="btn btn-secondary mx-5">Total de las compras registradas</button><br><br>
+    <div id="divRegistro" class="row"></div><br><br>
+
+    <button id="botonAdmin" class="btn mx-5" style="background:plum;">Códigos de compras</button><br><br>
+    <div id="divAdmin" class="row"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+</body>
+</html>
